methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:2: error: not found: type Str
def hunt(c: Str) {
            ^SlugSnail:15: error: not found: type Str
def isFacingTrail(c: Str):Boolean = {
                     ^